--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     />
 
     <!-- Template styles -->
-    <link href="taskpane.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body class="ms-font-m ms-Fabric">
