--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,10 @@
             type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/exceljs@1.12.1/dist/exceljs.min.js"
         ></script>
+        <script
+            type="text/javascript"
+            src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"
+        ></script>
 
         <script type="text/javascript">
             // Office js deletes window.history.pushState and window.history.replaceState. Restore them
